--- a/.env.example
+++ b/.env.example
@@ -61,3 +61,9 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+PAYMENT_SYSTEN_MERCHANT_ID=
+PAYMENT_SYSTEN_MERCHANT_KEY=
+
+PAYMENT_SYSTEN_APP_ID=
+PAYMENT_SYSTEN_APP_KEY=
